--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+Flask==1.1.2
 click==7.1.2
 Flask==1.1.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.2
+jinja2>=2.11.3
 MarkupSafe==1.1.1
+psycopg2==2.9.1
